--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "react": "^18.3.1",
     "react-aria-components": "^1.4.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
+    "react-type-animation": "^3.2.0",
     "styled-components": "^6.1.13",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
