--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "react-type-animation": "^3.2.0",
+    "scrollreveal": "^4.0.9",
     "styled-components": "^6.1.13",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -53,6 +54,7 @@
   },
   "devDependencies": {
     "@types/react-transition-group": "^4.4.11",
+    "@types/scrollreveal": "^0.0.11",
     "gh-pages": "^6.2.0"
   }
 }
