--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "personal-site",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ryanpag3.github.io/ryana.page",
+  "homepage": "https://ryana.page",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
